5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1649_2443.log
== TEST (2019-04-16 15:21:20) 
-- CODE:
from math import*
r=float(input("raio: "))
x=float(input("altura: "))
c=input("1 ou 2: ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1")
	print(round(v2,4))
else:
	print(round(v1-v2,4))


-- ERROR:
File "XXXX", line 7
    if(c=="1")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:21:29) 
-- CODE:
from math import*
r=float(input("raio: "))
x=float(input("altura: "))
c=input("1 ou 2: ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:21:40) 
-- CODE:
from math import*
r=float(input("raio: "))
x=float(input("altura: "))
c=input("1 ou 2: ")
v2=(pi*(x**2))*((3*r)-x)/3
v1=((4*pi)*(r**3))/3
if(c=="1"):
	print(round(v2,4))
else:
	print(round(v1-v2,4))


-- EXECUTION TIME:
0.179247
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
